<resources>
    <string name="app_name" translatable="false">OTTAA Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configuration</string>
    <string name="pref_open_settings">Opening settings.</string>
    <string name="spl_name">OTTAA Project</string>
    <string name="action_reiniciar">Reset</string>
    <string name="action_borrar">Delete</string>
    <string name="action_parar">Mute</string>
    <string name="action_share">Share</string>
    <string name="action_done">Done</string>
    <string name="pref_login">Sign up by clicking on the Sign In button. Thank you for choosing
        OTTAA Project.</string>
    <string name="pref_login_tu_sub">Your subscription ended </string>
    <string name="pref_login_tu_sub_2">To renew your license please contact us.</string>
    <string name="pref_login_gracias">Thank you for choosing OTTAA Project.</string>
    <string name="pref_login_contact">Contact Us</string>
    <string name="pref_login_autentificando">Ingresando...</string>
    <string name="pref_login_semana">Your trial period has just begun. Thank you for choosing OTTAA Project.</string>
    <string name="pref_login_lo_sentimos">Sorry, for the first use you need to be connected to internet. Sorry for this inconvenience.</string>
    <string name="pref_OK">OK</string>
    <string name="pref_cargando_DB">Loading Database ...</string>
    <string name="pref_cargando_presentacion">Loading personal presentation</string>
    <string name="pref_header_presentacion">Personal presentation</string>
    <string name="pref_text_presentacion">Uses the personal presentation</string>
    <string name="pref_title_presentacion">Presentation text</string>
    <string name="pref_example_presentacion">Hello I am Juan, I have communication problems and I use this system, I need you to wait for me.</string>
    <string name="pref_header_tts">Text-to-speech Engine</string>
    <string name="pref_text_tts">Enable custom TTS</string>
    <string name="pref_summary_tts">It enables a customized voice.</string>
    <string name="pref_option1_tts">Speech rate</string>
    <string name="pref_option2_tts">Voice pitch</string>
    <string name="pref_header_subtitulo">Subtitle</string>
    <string name="pref_header_cerrar_sesion">Sign out</string>
    <string name="pref_header_cerrar_sesion2">Sign out to change user</string>
    <string name="my_own_title">Rate OTTAA Project</string>
    <string name="my_own_rate">Yes</string>
    <string name="my_own_thanks">No, thanks</string>
    <string name="my_own_cancel">Later</string>
    <string name="youAreNotUpdatedMessage">A new version of OTTAA is available. Please update to the lastest version to get all the new cool features.</string>
    <string name="youAreNotUpdatedMessage1">Now</string>
    <string name="update">Update</string>
    <string name="pref_text_subtitulo">Customized subtitle</string>
    <string name="pref_summary_subtitulo">Show customized captions.</string>
    <string name="pref_subtitulo_tamanio">Size</string>
    <string name="pref_subtitulo_mayuscula">Uppercase</string>
    <string name="pref_subtitulo_mayuscula_summary">It allows uppercase subtitles.</string>
    <string name="pref_idioma">Language</string>
    <string name="pref_agenda">Customized calendar</string>
    <string name="pref_text_agenda">Selected calendar</string>
    <string name="pref_summary_agenda">Choose the calendar with your daily routine.</string>
    <string name="pref_ubicacion">Location</string>
    <string name="pref_summary_ubicacion">Improves prediction by geo tagging.</string>
    <string name="pref_barrido">Screen scanning</string>
    <string name="pref_summary_barrido">It allows to use the application by scanning <screen class=""></screen></string>
    <string name="pref_experimental" translatable="false">OTTAA Labs</string>
    <string name="pref_summary_experimental">Use artificial intelligence to generate a richer sentence. You need a stable internet connection.</string>
    <string name="pref_editar">Edit Pictograms</string>
    <string name="pref_summary_editar">Allow to disable the function Edit Pictograms.</string>
    <string name="pref_open_editar">Opening pictogram editor.</string>
    <string name="pref_cual_es">What\'s the picto</string>
    <string name="pref_error_editar">Sorry, these pictograms can not be edited.</string>
    <string name="pref_text_editar">Pictogram text</string>
    <string name="pref_opcion_editar">Related pictograms</string>
    <string name="pref_select_camara">Camera</string>
    <string name="pref_select_galeria">Galery</string>
    <string name="pref_select_pictos">Download from ARASAAC</string>
    <string name="pref_important_alert">Important</string>
    <string name="pref_confirmar_alert">Confirm</string>
    <string name="pref_cancelar_alert">Cancel</string>
    <string name="pref_yes_alert">Yes</string>
    <string name="pref_no_alert">No</string>
    <string name="pref_enviar">Send to</string>
    <string name="pref_error_112">ERROR: 112. The function is not available in your device.</string>
    <string name="pref_error_312">ERROR: 312. The Google Play services APK is not up-to-date please install the latest version.</string>
    <string name="pref_error_222">ERROR: 222. We are having problems to connect to the server, please try again later.</string>
    <string name="pref_error_TTS" translatable="false">ERROR: 568. TextToSpeech engine is not working.</string>
    <string name="pref_elija">Choose an option</string>
    <string name="pref_text1_alert">Do you want to save changes ?</string>
    <string name="pref_text2_alert">Do you want to restore the factory settings ?</string>
    <string name="pref_text3_alert">Do you want to create a new Pictogram ?</string>
    <string name="pref_text4_alert">Do you want to delete the selected Pictogram ?</string>
    <string name="pref_text5_alert">Do you want to delete the selected Group ?</string>
    <string name="pref_step1_tuto">Now, we are going to guide you to create a sentence with voice using OTTAA Project.</string>
    <string name="pref_final_tuto">Find share configurations options on the top bar.</string>
    <string name="pref_title2_tuto">Create a sentence</string>
    <string name="pref_step2_tuto">Select the pictogram you want by clicking on it.</string>
    <string name="pref_title3_tuto">Start talking</string>
    <string name="pref_step3_tuto">We are ready! Touch the OTTAA logo to start talking.</string>
    <string name="pref_title4_tuto">Reset</string>
    <string name="pref_step4_tuto">Touch the reset icon, or press the back key, to create a new sentence.</string>
    <string name="pref_title5_tuto">Not finding \n what you need?</string>
    <string name="pref_step5_tuto">Touch the spinner to \n find more related pictos.</string>
    <string name="pref_title6_tuto">Need even more options?</string>
    <string name="pref_step6_tuto">Here you will find all the pictos sorted by categories.</string>
    <string name="tuto_title1_galeriaPictos">Choose a picto</string>
    <string name="tuto_step1_galeriaPictos">You can choose the picto you want by clicking it.\n
                                            Press and hold to edit a picto \n or delete it.</string>
    <string name="tuto_title2_galeriaPictos">Create your own picto</string>
    <string name="tuto_step2_galeriaPictos">Pressing the \"plus\" you can \n create your own picto.</string>
    <string name="tuto_title3_galeriaPictos">Add more pictos to this gallery</string>
    <string name="tuto_step3_galeriaPictos">Pressing the  \"link\" button you can \n add more pictos to this gallery.</string>
    <string name="tuto_title1_galeriaGrupos">Choose one of the categories</string>
    <string name="tuto_step1_galeriaGrupos">You will find the picto you want by \n pressing one of the categories.\n
                                            Press and hold the selected category \n to edit it of delete it.</string>
    <string name="tuto_title2_galeriaGrupos">Create your own category</string>
    <string name="tuto_step2_galeriaGrupos">Pressing the \"plus\" button you can \n create your own category.</string>
    <string name="tuto_title1_editPicto">Change the image</string>
    <string name="tuto_step1_editPicto">Pressing inside the circle you can change the pictos image.</string>
    <string name="tuto_title2_editPicto">What do you want to say?</string>
    <string name="tuto_step2_editPicto">Edit the text so the picto \n will say whatever you want.</string>
    <string name="tuto_title3_editPicto">Make it speak!</string>
    <string name="tuto_step3_editPicto">Press the OTTAA logo to \n play the text of the picto.</string>
    <string name="tuto_title4_editPicto">Give it some color</string>
    <string name="tuto_step4_editPicto">Categorize the picto based on the \n ARASAAC color code. \n Green:Actions Yellow:People Blue:Adjectives \n Orange: Nouns Magenta: Miscellanea.</string>
    <string name="tuto_title5_editPicto">Link the group</string>
    <string name="tuto_step5_editPicto">You can link this category with \n the calendar or with a GPS location.</string>
    <string name="tuto_title_vincularCalendar">Link this group with a Calendar entry</string>
    <string name="tuto_step_vincularCalendar">You can link this group with certain event \n so at that time and date, this pictos will popup.</string>
    <string name="tuto_title_vincularGPS">Link with GPS location</string>
    <string name="tuto_step_vincularGPS">Link this set of pictograms with certain GPS location. \n so when are near that location the pictos will popup \n Dont forget to set the desired location in settings.</string>
    <string name="pref_listo_tuto">Done</string>
    <string name="edit_grupo">Choose the pictograms for the group</string>
    <string name="edit_grupo_seguro">Are you sure you want to close Edit Picto ?</string>
    <string name="edit_grupo_cambios">Do you want to save it ?</string>
    <string name="edit_picto_visual_complete">Please write the name of the Pictogram</string>
    <string name="pref_ubicacion_alert"> Reset the location ?</string>
    <string name="guardar">Save</string>
    <string name="descartar">Discard</string>
    <string name="pref_calendario_elija">Choose a calendar</string>
    <string name="vincular">Select the pictograms you want to link with the group</string>
    <string name="problema_inet">We are sorry you need internet to use this feature.</string>
    <string name="bool_presentacion" translatable="false">bool_presentacion</string>
    <string name="bool_TTS" translatable="false">bool_tts</string>
    <string name="bool_subtitulo" translatable="false">bool_subtitulo</string>
    <string name="bool_subtitulo_mayuscula" translatable="false">bool_subtitulo_mayuscula</string>
    <string name="bool_calendario" translatable="false">bool_calendario</string>
    <string name="str_idioma" translatable="false">idioma</string>
    <string name="str_presentacion" translatable="false">presentacion_text</string>
    <string name="str_editar_picto" translatable="false">editar_picto</string>
    <string name="EscribaAqui">Write here…</string>
    <string name="TextOutloud">Enter the text to say it loud</string>
    <string name="NamePicto">Enter the text to name the Picto</string>
    <string name="PickAColor">Pick a color for the frame</string>
    <string name="vincular_con_calendario">Link with Calendar</string>
    <string name="vincular_con_ubicacion">Link with Location</string>
    <string name="generar_infor">Generate Report</string>
    <string name="mBoolModoExperimental" translatable="false">mBoolModoExperimental</string>
    <string name="pref_header_tutorial" translatable="false">Tutorial</string>
    <string name="pref_title_tutorial">Relaunch tutorial</string>
    <string name="pref_summary_tutorial">Take the tutorial again and learn a few more tips on how to use OTTAA</string>
</resources>