<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoApp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ic_fondomaterial"
        android:titleTextAppearance="@color/White"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="25dp">

            <com.stonefacesoft.ottaa.Custom_Picto
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp"
                android:id="@+id/ElPicto">
            </com.stonefacesoft.ottaa.Custom_Picto>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    android:src="@drawable/icono_ottaa"
                    android:layout_weight="2"
                    android:id="@+id/IconoOTTAA" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:id="@+id/TextOutloud"
                        android:text="@string/TextOutloud" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:id="@+id/TextViewTextOutLoud"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"


                        android:hint="@string/EscribaAqui"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:id="@+id/TextViewFrameColor"
                    android:text="@string/PickAColor"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Black"
                        android:id="@+id/Negro"
                        android:layout_weight="6"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/YellowGreen"
                        android:id="@+id/Verde"
                        android:layout_weight="6"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Orange"
                        android:id="@+id/Naranja"
                        android:layout_weight="6"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Yellow"
                        android:id="@+id/Amarillo"
                        android:layout_weight="6"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Magenta"
                        android:id="@+id/Magenta"
                        android:layout_weight="6"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/DodgerBlue"
                        android:id="@+id/Azul"
                        android:layout_weight="6"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/VincularCalendario"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/NaranjaOTTAA"
                    android:layout_margin="5dp"
                    android:text="@string/vincular_con_calendario"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/VincularUbicacion"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@color/NaranjaOTTAA"
                    android:text="@string/vincular_con_ubicacion"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>