<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FondoApp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ic_fondomaterial"
        android:titleTextAppearance="@color/White"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="25dp">

        <com.stonefacesoft.ottaa.Custom_Picto
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:id="@+id/ElPicto">
        </com.stonefacesoft.ottaa.Custom_Picto>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/TextViewFrameColor"
                android:text="@string/PickAColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Black"
                    android:id="@+id/Negro"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/YellowGreen"
                    android:id="@+id/Verde"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Orange"
                    android:id="@+id/Naranja"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Yellow"
                    android:id="@+id/Amarillo"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Magenta"
                    android:id="@+id/Magenta"
                    android:layout_weight="6"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/DodgerBlue"
                    android:id="@+id/Azul"
                    android:layout_weight="6"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/TextNombrePicto"
                android:text="@string/NamePicto" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/TextViewNombrePicto"
                android:hint="@string/EscribaAqui" />
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>